# video_transport

./: README.md
receiver/: decoder.cpp  decoder.h  h264_video_transport.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
receiver/include/libavutil/: common.h  ffversion.h
sender/: CMakeLists.txt
sender/include/: encoder.h  transport.h
sender/src/: encoder.cpp  main.cpp  main.cpp.cpy
